[tool.poetry]
name = "french-gas-prices"
version = "0.1.0"
description = ""
authors = ["Furcy Pin <pin.furcy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
requests = "^2.31.0"
pyspark = "^3.5.0"
spark-frame = "0.5.*"
data-diff-viewer = "0.3.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

